# RouteBox

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml  ci.yml
apps/cloud-gateway/: .dockerignore  .env.example  Dockerfile  README.md  admin.html  docker-compose.yml  landing.html  nginx-init.conf  nginx.conf  openapi.yaml  package.json  tsconfig.json
apps/cloud-gateway/admin/: index.html
apps/cloud-gateway/migrations/: 001_init.sql  002_phase2.sql  003_polar.sql  004_admin_config.sql  005_model_registry.sql  006_model_plan_access.sql  007_credit_packages.sql  008_announcements.sql  009_user_uid.sql  010_api_keys.sql  011_three_tier_plans.sql  012_model_registry_pricing.sql  013_credits_quota_packages.sql  014_referral_revenue_share.sql  015_reset_model_registry.sql  016_routing_config.sql  017_password_reset.sql  018_admin_audit_indexes.sql  019_user_status.sql  020_model_status_disabled.sql  021_cascade_deletes.sql  022_webhook_events_and_indexes.sql  023_pending_deductions.sql  024_quota_index.sql  (+1 more)
apps/desktop/: .gitignore  README.md  index.html  package.json  vite.config.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  error.rs  keychain.rs  lib.rs  tray.rs
apps/gateway/: .dockerignore  .env.example  Dockerfile  package.json  test-preload.ts  tsconfig.json
apps/landing/: index.html
apps/web/: index.html  package.json
scripts/: preflight.sh  setup-secrets.sh
(+159 files in other folders)
